--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,9 +1,12 @@
 name: Docker Build and Push
 
+# on:
+#   push:
+#     tags:
+#       - 'v*'
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
@@ -31,7 +34,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -42,7 +45,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: v9r73x/cs2-rcon-mcp:latest
