--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,12 +1,9 @@
 name: Docker Build and Push
 
-# on:
-#   push:
-#     tags:
-#       - 'v*'
 on:
   push:
-    branches: [ "main" ]
+    tags:
+      - 'v*'
 
 env:
   REGISTRY: ghcr.io
